minor: fix several deprecations