@@ -39,7 +39,7 @@ import org.eclipse.ui.plugin.AbstractUIPlugin;
 /**
  * Register for the configuration types ui thats use the
  * <i>net.sf.eclipsecs.ui.configtypesui </i> extension point.
- * 
+ *
  * @author Lars Ködderitzsch
  */
 public final class ConfigurationTypesUI {
@@ -106,7 +106,7 @@ public final class ConfigurationTypesUI {
 
   /**
    * Creates the editor for a given configuration type.
-   * 
+   *
    * @param configType
    *          the configuration type
    * @return the editor
@@ -122,9 +122,9 @@ public final class ConfigurationTypesUI {
     if (editorClass != null) {
 
       try {
-        ICheckConfigurationEditor editor = editorClass.newInstance();
+        ICheckConfigurationEditor editor = editorClass.getDeclaredConstructor().newInstance();
         return editor;
-      } catch (InstantiationException | IllegalAccessException | ClassCastException e) {
+      } catch (ClassCastException | ReflectiveOperationException e) {
         CheckstylePluginException.rethrow(e);
       }
     }
@@ -134,7 +134,7 @@ public final class ConfigurationTypesUI {
 
   /**
    * Return an image for the given configuration type.
-   * 
+   *
    * @param configType
    *          the configuration type
    * @return the image representing the configuration type or <code>null</code>
